# FrenchVerbs

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  french-verb-conjugations.json  frvb.sqlite3  generate.py  generated.txt  index.html  index.js  minshell.html
scripts/: conjugations.json  generate.py  generate2.py  generated.txt  import.py  recognitions.db  recogs.py  recs.sql  wordlist.txt
scripts/splitrows/: xab  xaf  xag  xah  xaj  xal
site/: frvbidx.css  index.js  paradigms.html  paradigms.js  recognitions.html  recognitions.js
src/: App.cpp  App.h  App2.cpp  App2.h  Conj.cpp  Conj.h  DbManager.cpp  DbManager.h  DbManager2.cpp  DbManager2.h  Label.h  Recognition.cpp  Recognition.h  main-rcg.cpp  main.cpp
src/splitrows/: rows.h  xaa  xac  xad  xae  xai  xak
